fix screen-reader link contrast

--- a/CMS/static/scss/global.scss
+++ b/CMS/static/scss/global.scss
@@ -117,6 +117,7 @@ a {
   position: absolute;
   white-space: nowrap;
   width: 1px;
+  color: $white;
 
   &:active,
   &:focus {
